feat: Add friends and enemies lists

--- a/app/src/main/res/layout/activity_friends.xml
+++ b/app/src/main/res/layout/activity_friends.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ui.screens.friends.Friends">
 
     <ProgressBar
         android:id="@+id/pb_friends"
@@ -28,7 +28,7 @@
         android:id="@+id/rv_friends"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
