--- a/app/src/main/res/layout/superhero_view.xml
+++ b/app/src/main/res/layout/superhero_view.xml
@@ -10,19 +10,33 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="188dp"
         android:background="@color/white">
 
         <Button
-            android:id="@+id/btn_episodes"
+            android:id="@+id/btn_enemies"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/view_info"
+            android:text="@string/view_enemies"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/iv_character_picture"
-            app:layout_constraintTop_toBottomOf="@+id/iv_character_picture" />
+            app:layout_constraintStart_toStartOf="@+id/iv_superhero_picture"
+            app:layout_constraintTop_toBottomOf="@+id/iv_superhero_picture"
+            app:layout_constraintVertical_bias="0.913" />
+
+        <Button
+            android:id="@+id/btn_friends"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="156dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/view_friends"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/iv_superhero_picture"
+            app:layout_constraintTop_toBottomOf="@+id/iv_superhero_picture"
+            app:layout_constraintVertical_bias="0.928" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -30,39 +44,54 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_character_picture"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_superhero_picture"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/iv_character_picture"
-            app:layout_constraintTop_toTopOf="@+id/iv_character_picture">
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/iv_superhero_picture"
+            app:layout_constraintTop_toTopOf="@+id/iv_superhero_picture"
+            app:layout_constraintVertical_bias="1.0">
 
             <TextView
-                android:id="@+id/tv_character_name"
+                android:id="@+id/tv_superhero_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                tools:text="#1 - Rick Sanchez" />
+                tools:text="#1 - superhero" />
 
             <TextView
-                android:id="@+id/tv_character_gender"
+                android:id="@+id/tv_superhero_alter_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                tools:text="Male" />
+                tools:text="batman" />
 
-            <ImageView
-                android:id="@+id/iv_character_status"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+            <TextView
+                android:id="@+id/tv_superhero_main_enemie"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:tint="@android:color/holo_green_dark"
-                tools:srcCompat="@drawable/ic_alive" />
+                tools:text="lutor" />
+
+            <TextView
+                android:id="@+id/tv_superhero_powers"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                tools:text="fly" />
+
+            <TextView
+                android:id="@+id/tv_superhero_locations"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                tools:text="Tunja" />
 
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/iv_character_picture"
+            android:id="@+id/iv_superhero_picture"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
