--- a/app/src/main/res/layout/activity_enemies.xml
+++ b/app/src/main/res/layout/activity_enemies.xml
@@ -22,7 +22,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"> <!-- Padding para espaciado interno -->
+        android:padding="16dp"
+        android:background="@color/black">
 
         <ImageView
             android:id="@+id/iv_image_enemy"
@@ -34,29 +35,37 @@
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
+            android:id="@+id/title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="@string/principal_enemy"
+            android:textColor="@color/black"
+            android:textSize="27sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/iv_image_enemy"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Principal Enemy" />
+
+        <TextView
             android:id="@+id/tv_enemy_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:textSize="18sp"
-            android:textColor="@color/black"
+            android:layout_marginTop="52dp"
+            android:textSize="20sp"
+            android:textColor="@color/textSecondary"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/iv_image_enemy"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             tools:text="Reverse Flash" />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-        <ProgressBar
-            android:id="@+id/pb_enemy_main"
-            style="?android:attr/progressBarStyle"
-            android:layout_gravity="center"
-            android:visibility="invisible"
-            tools:visibility="visible"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
 </androidx.cardview.widget.CardView>
 
@@ -66,9 +75,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:text="@string/enemies"
         android:textStyle="bold"
+        android:textSize="27sp"
+        android:textColor="@color/textPrimary"
         app:layout_constraintStart_toStartOf="@+id/cv_enemyMain"
-        app:layout_constraintTop_toBottomOf="@+id/cv_enemyMain" />
+        app:layout_constraintTop_toBottomOf="@+id/cv_enemyMain"
+        tools:text="Enemies" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_enemies"
@@ -88,6 +101,7 @@
         android:layout_height="128dp"
         android:visibility="invisible"
         tools:visibility="visible"
+        android:textColor="@color/textSecondary"
         app:layout_constraintBottom_toBottomOf="@+id/rv_enemies"
         app:layout_constraintEnd_toEndOf="@+id/rv_enemies"
         app:layout_constraintStart_toStartOf="@+id/rv_enemies"
