--- a/app/src/main/res/layout/activity_view_enemies.xml
+++ b/app/src/main/res/layout/activity_view_enemies.xml
@@ -4,16 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginBottom="4dp"
-    app:cardCornerRadius="16dp">
+    app:cardCornerRadius="16dp"
+    android:background="@color/red">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/cardview_light_background">
+        android:background="#D3D3D3">
+
         <ImageView
             android:id="@+id/iv_image_enemy"
             android:layout_width="128dp"
@@ -28,19 +26,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="27dp"
+            android:textStyle="bold"
+            android:textColor="@color/textPrimary"
+            android:text = "@string/id_enemy"
+            android:textSize="23sp"
             app:layout_constraintStart_toEndOf="@id/iv_image_enemy"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="1" />
+            tools:text="Id: 1" />
 
         <TextView
             android:id="@+id/tv_name_enemy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:textSize="19sp"
+            android:textColor="@color/textSecondary"
             app:layout_constraintStart_toStartOf="@id/tv_id_enemy"
             app:layout_constraintTop_toBottomOf="@id/tv_id_enemy"
-            tools:text="Joker" />
+            android:text="@string/name_enemy"
+            tools:text="Name Joker" />
 
 
 
